src/test/ui/rfc-2632-const-trait-impl/hir-const-check.stderr
error[E0744]: `?` is not allowed in a `const fn`
  --> $DIR/hir-const-check.rs:12:9
   |
LL |         Some(())?;
   |         ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0744`.
